# aprsd-weather-website

./: .gitignore  Dockerfile  Dockerfile.old  Makefile  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: gunicorn_conf.py  lat_lon.py  log.py  main.py  piss.py  run.sh  test_scratch.py.bak  utils.py
app/config/: aprsd_listen.conf
app/web/static/css/: about-dark.css  index.css  map-dark.css  map.css  responsive.css  sidebar-dark.css  theme.css
app/web/static/js/: main.js  map_leaflet.js  theme-toggle.js  weather-layers.js
app/web/templates/: about.html  index-old.html  index.html
config/: aprsd_repeat.conf
docs/superpowers/plans/: 2026-03-19-wxnow-dark-mode-refresh.md
docs/superpowers/specs/: 2026-03-19-wxnow-dark-mode-refresh-design.md
goaccess/conf/html/: index.html
tests/: conftest.py  test_app.py
