[project]
name = "aprsd-weather-website"
version = "1.0.0"
description = "APRS Weather (WXNOW) web interface for APRSD"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Craig Lamparter", email = "craig@lamparter.org"}
]
keywords = ["aprs", "ham-radio", "weather", "amateur-radio"]

dependencies = [
    "aprsd @ git+https://github.com/craigerl/aprsd.git@master",
    "geojson",
    "requests",
    "rich",
    "simple-websocket",
    "oslo.config",
    "oslo.log",
    "click",
    "click-completion",
    "cachetools",
    "pyproj",
    "uvicorn[standard]==0.20.0",
    "gunicorn==20.1.0",
    "fastapi[all]==0.109.2",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",  # For testing FastAPI
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ============================================
# Ruff - Fast Python Linter
# ============================================
[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "*.pyc",
    ".eggs",
    "build",
    "dist",
    "app/lat_lon.py",  # Vendored/external library
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI uses this)
    "B905",   # zip without strict= (Python 3.10+ only)
    "SIM108", # Use ternary operator (not always clearer)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================
# Pytest - Testing Framework
# ============================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ============================================
# Coverage
# ============================================
[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
